--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "crop/crop.js",
   "dependencies": {
-    "mathjs": "^6.6.4",
-    "snapsvg": "^0.5.1"
+    "milligram": "^1.3.0",
+    "snapsvg": "^0.5.1",
+	"vue": "^2.6.11"
+  },
+  "overrides": {
+    "vue": {
+        "main": "dist/vue.min.js"
+    }
   }
 }
