--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mathjs": "^6.6.4",
-    "snapsvg": "^0.5.1"
+    "milligram": "^1.3.0",
+    "snapsvg": "^0.5.1",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "express": "^4.17.1",
