--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "itr",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "cropcircle",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "core-js": "^3.6.4",
+    "imports-loader": "^0.8.0",
     "milligram": "^1.3.0",
     "snapsvg": "^0.5.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-plugin-load-script": "^1.2.0",
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
-    "express": "^4.17.1",
-    "gulp": "^4.0.2",
-    "gulp-inject": "^5.0.5",
-    "nodemon": "^2.0.3",
-    "npm-wiredep": "0.0.4",
-    "wiredep": "^4.0.0"
-  }
+    "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-router": "~4.3.0",
+    "@vue/cli-service": "~4.3.0",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
