--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vue/cli": "^4.4.1",
     "core-js": "^3.6.4",
+    "gsap": "^3.3.1",
     "imports-loader": "^0.8.0",
     "milligram": "^1.3.0",
     "snapsvg": "^0.5.1",
